--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "html canvas game bomberman like ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo \"Error: no build specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "./node_modules/http-server/bin/http-server"
   },
   "repository": {
     "type": "git",
@@ -30,5 +32,8 @@
   "homepage": "https://github.com/Bizarret/BomberGirl#readme",
   "dependencies": {
     "phaser": "^3.22.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.12.1"
   }
 }
